# cross_dev

./: .gitignore  Cargo.toml  LICENSE  README.md  run.rs  run.sh
configs/: default.toml
configs/linux/: extra.config
crossdev/: Cargo.toml
crossdev/src/: buildroot.rs  config.rs  crossdev.rs  env.rs  error.rs  gdb.rs  lib.rs  linux.rs  opensbi.rs  qemu.rs  ssh.rs  toolchain.rs  traits.rs  utils.rs
custom_buildroot/: external.desc
custom_buildroot/board/overlay/etc/ssh/: sshd_config
custom_buildroot/board/riscv/overlay/etc/: inittab
custom_buildroot/board/riscv/overlay/etc1/ssh/: sshd_config
custom_buildroot/configs/: qemu_riscv64_virt_riscv_defconfig
gdb/: .gdbinit.py
xdev/: Cargo.toml
xdev/src/: main.rs
