[package]
name = "xdev"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = { version = "0.6" }
crossdev = { path = "../crossdev" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8" }
xshell = { version = "0.3.0-pre.2" }
